syntax = "proto3";

package product;

option go_package = "go-api-gateway/internal/generated/product";

service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
  rpc ListProducts(Empty) returns (ProductsResponse);
  rpc GetProductsByCategory(CategoryRequest) returns (ProductsResponse);
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(ProductRequest) returns (DeleteResponse);
}

message ProductRequest {
  string id = 1;
}

message CategoryRequest {
  string category_id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category_id = 5;
}

message ProductsResponse {
  repeated ProductResponse products = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string category_id = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category_id = 5;
}

message Empty {}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}